<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@drawable/bg_vertical"
	>	
	<LinearLayout		 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_gravity="center"
		android:background="@drawable/bg_stop_bar"		
		>
		<TextView 		    
		    android:id="@+id/tv_timeView" 
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content" 
			android:text="@string/stopw_title_default" 			
		    android:textColor="@color/white" 
		    android:gravity="center"			
			android:textSize="60dp"
			/>
		<LinearLayout 
			android:orientation="horizontal" 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			>			
			<Button 
			    android:id="@+id/btn_start"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/stopw_btn_start"
				android:textSize="25dp"
				android:paddingRight="20dp"
				android:paddingLeft="20dp"
				android:layout_marginRight="25dp"
				/>
			<Button 
			    android:id="@+id/btn_pause"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/stopw_btn_pause"
				android:textSize="25dp"
				android:paddingRight="20dp"
				android:paddingLeft="20dp"
				android:layout_marginRight="25dp"
				android:visibility="gone"
				/>
			<Button 
			    android:id="@+id/btn_mark"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/stopw_btn_mark"
				android:textSize="25dp"
				android:paddingRight="20dp"
				android:paddingLeft="20dp"
				android:visibility="gone"
				/>
			<Button 
			    android:id="@+id/btn_reset"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/stopw_btn_reset"
				android:textSize="25dp"
				android:paddingRight="20dp"
				android:paddingLeft="20dp"
				android:visibility="visible"
				android:enabled="false"
				/>
		</LinearLayout>
			
	</LinearLayout>


	<ListView 
	    android:id="@+id/lv_marks" 
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:cacheColorHint="@color/transparent"
	    android:divider="@color/transparent"
	    >	    
	</ListView>
</LinearLayout>
